# CCTV-Dissertaion

./: .gitignore  .pre-commit-config.yaml  DEVELOPMENT_LOG.md  Makefile  README.dev-setup.md  README.md  merge_videos.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_processing.py  run_scalability_tests.py
.github/workflows/: python-app.yml
data/: analysis.db
data/manifests/: ingest_manifest.json
scripts/: detect_plates_sahi.py  detect_plates_twostage.py  detect_vehicles_plates.py  detect_vehicles_tracked.py  hash_file.py  process_all_videos.py  process_dvr_cross_camera.py  process_garden.py  process_parallel.py
src/: __init__.py  app.py
src/cctv_dissertation/: __init__.py  analysis.py  api.py  app.py  attributes.py  detection.py  evaluation.py  evidence_export.py  ingest.py  motion.py  person_reid.py  plates.py  storage.py  tamper_detection.py  tracker.py  tracking.py  vehicle_reid.py
src/cctv_dissertation/utils/: __init__.py  hashing.py  video_io.py
src/utils/: hashing.py  video_io.py
tests/: test_analysis.py  test_detection.py  test_hashing.py  test_ingest.py  test_storage.py  test_tracking.py
ui/: streamlit_app.py
