[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cctv_dissertation"
version = "0.0.0"
description = "Forensics Video Analysis Tool: Automated Detection, Tracking and Integrity Verification System (skeleton)"
authors = [ { name = "LukeyBookey21" } ]
readme = "README.md"
requires-python = ">=3.11"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
